--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "^0.3.0",
@@ -34,6 +28,7 @@
     "query-string": "^6.10.1",
     "rc-pagination": "^1.20.13",
     "rc-select": "^9.2.3",
+    "react": "^16.12.0",
     "react-app-polyfill": "^0.2.2",
     "react-bootstrap-table-next": "^3.3.3",
     "react-bootstrap-table2-paginator": "^2.1.0",
@@ -44,6 +39,7 @@
     "react-datepicker": "^2.11.0",
     "react-dates": "^21.8.0",
     "react-device-detect": "^1.11.14",
+    "react-dom": "^16.12.0",
     "react-image": "^2.3.0",
     "react-loadable": "^5.5.0",
     "react-loader-advanced": "^1.7.1",
@@ -53,6 +49,7 @@
     "react-redux": "^6.0.1",
     "react-router": "^5.1.2",
     "react-router-config": "^5.1.1",
+    "react-scripts": "^2.1.8",
     "react-select": "^3.0.8",
     "react-select-animated": "^1.3.2",
     "react-spinkit": "^3.0.0",
@@ -90,5 +87,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.18.1",
+    "prop-type": "0.0.1",
+    "react-router-dom": "^5.1.2"
   }
 }
