--- a/prueba_tecnica/prueba_tecnica/ClientApp/package.json
+++ b/prueba_tecnica/prueba_tecnica/ClientApp/package.json
@@ -15,12 +15,16 @@
     "react-bootstrap": "^1.0.1",
     "react-data-table-component": "^6.9.3",
     "react-dom": "^16.0.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "react-select": "^3.1.0",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
-    "styled-components": "^5.1.1"
+    "simple-react-validator": "^1.4.6",
+    "styled-components": "^5.1.1",
+    "sweetalert2": "^9.15.1"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
