--- a/prueba_tecnica/prueba_tecnica/ClientApp/package.json
+++ b/prueba_tecnica/prueba_tecnica/ClientApp/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
+    "moment": "^2.27.0",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-bootstrap": "^1.0.1",
@@ -22,6 +23,7 @@
     "react-select": "^3.1.0",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
+    "rutfunctions": "^1.1.1",
     "simple-react-validator": "^1.4.6",
     "styled-components": "^5.1.1",
     "sweetalert2": "^9.15.1"
