--- a/prueba_tecnica/prueba_tecnica/ClientApp/package.json
+++ b/prueba_tecnica/prueba_tecnica/ClientApp/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@progress/kendo-react-dropdowns": "^3.14.0",
+    "@progress/kendo-react-intl": "^3.14.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "jquery": "^3.4.1",
